--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+.container-0 {
+   width: 100%;
+   height: 100%;
+   min-height: 100vh;
+}
+
+.container-1 {
+   background-color: aquamarine;
+
+}
+
+.container-2 {
+   background-color: green;
+}
+
 .App {
   text-align: center;
 }
